Bug 31753 - Calc: Active cell not highlighted after shifting between sheets
Summary: Calc: Active cell not highlighted after shifting between sheets
Status: CLOSED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
3.3.0 Beta3
Hardware: x86 (IA32) Windows (All)
: medium normal
Assignee: Kohei Yoshida
URL:
Whiteboard: target:3.3
Keywords:
Depends on:
Blocks:
 
Reported: 2010-11-19 00:40 UTC by Fred New
Modified: 2011-01-13 03:17 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Png image after selecting the "stocks" sheet - highlighting borders missing. (41.38 KB, image/png)
2010-11-19 00:40 UTC, Fred New
Details
PNG image - What I expect: borders around the active cell (41.48 KB, image/png)
2010-11-19 00:42 UTC, Fred New
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Fred New 2010-11-19 00:40:49 UTC
Created attachment 40404 [details]
Png image after selecting the "stocks" sheet - highlighting borders missing.

Normally I see a bold black border around the active cell, but that border doesn't appear whenever I shift between sheets in a file.

How to see the problem:
     Click on a sheet tab  OR
     Use <Ctrl><Page Down>  or <Ctrl><Page Up>

What I see:
     The column is highlighted in blue at the top, and the row is highlighted in blue on the left side, but the cell itself doesn't have the usual black border.

What I expect:
     A black border around the currently active cell.
Comment 1 Fred New 2010-11-19 00:42:47 UTC
Created attachment 40405 [details]
PNG image - What I expect: borders around the active cell
Comment 2 Don't use this account, use tml@iki.fi 2010-11-19 03:36:01 UTC
For Kohei presumably.
Comment 3 Kohei Yoshida 2010-11-19 06:10:42 UTC
This is not a bug.  We made changes to keep the cell cursor at the origin when making range selection.  So the cell cursor is supposed to stay there even when the origin cell is outside the visible area while expanding the selected range.
Comment 4 Fred New 2010-11-19 06:20:49 UTC
It doesn't sound like you understood me.  Whenever I get to a new sheet, I can't tell where the cell cursor is, even though it's in the visible area.  In my first PNG image, the cell cursor should be shown at cell A2216.
Comment 5 Fred New 2010-11-19 06:23:32 UTC
If the cell cursor is going to the origin (cell A1?), then why does the cell cursor appear in cell A2217 when I press the down arrow once?
Comment 6 Kohei Yoshida 2010-11-19 06:27:57 UTC
Ah ok.  Now I understand.

Yes, this is a known issue.  When the cursor is outside the visible area on one sheet, then switching a sheet causes the cursor to not get displayed.
Comment 7 Kohei Yoshida 2010-11-19 06:41:07 UTC
(In reply to comment #5)
> If the cell cursor is going to the origin (cell A1?), then why does the cell
> cursor appear in cell A2217 when I press the down arrow once?

Regarding this, when I said the "origin cell", it's the cell where you started the range, not A1.  For instance, if the range you are making is from B10 toward D30, then the origin cell is B10 in this case.

Sorry about the confusion.
Comment 8 Fred New 2010-11-19 06:44:49 UTC
Thanks for the clarification.  I guess I should learn some terminology.

The known issue you describe in comment 6 is indeed the problem.  If
- My cell cursor is in A1 on Sheet2
- And I can't see cell A1 on Sheet1
then when I go from Sheet1 to Sheet2 the cell cursor won't be shown, even though it is in the visible area.
Comment 9 Kohei Yoshida 2010-11-29 16:25:19 UTC
Ok. This is now fixed on libreoffice-3-3, in time for the next release (RC1?).

http://cgit.freedesktop.org/libreoffice/calc/commit/?h=libreoffice-3-3&id=052488532d2237ea12a6cfd72d6e38350e5ae122
Comment 10 Fred New 2010-12-06 02:05:31 UTC
Confirmed fixed in libreoffice-3-3 rc 1.
Comment 11 sophie 2011-01-13 03:17:58 UTC
Verified - Closed - Sophie