Re-calculate visible range when switching sheets.

Visible range of the current sheet is used to decide whether or not
to render cell cursor.  Failing to do that was causing the cursor
to disappear when switching sheets while the cursor on the current
sheet was invisible. (fdo#31753)