sc/source/ui/inc/tabview.hxx
@@ -210,6 +210,7 @@ protected:
 
     void            ZoomChanged();
     void            UpdateShow();
+    void            UpdateVisibleRange();
     void            GetBorderSize( SvBorder& rBorder, const Size& rSize );
 
     void            ResetDrawDragMode();
